--- a/src/components/animations.css
+++ b/src/components/animations.css
@@ -39,3 +39,14 @@
         filter: drop-shadow(1px 1px 5px #40E0D0);
     }
 }
+@keyframes dividerColorAnimated {
+    0% {
+        box-shadow: 10px 1px 1px #40E0D0;
+    }
+    50%{
+        box-shadow: 10px 1px 5px #40E0D0;
+    }
+    100%{
+        box-shadow: 10px 1px 1px #40E0D0;
+    }
+}
